# hecate

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  alembic.ini  pyproject.toml  test-plugin.hecate-plugin
.claude/: settings.local.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  pr-lint.yml
alembic/: env.py
alembic/versions/: 000_base.py  001_context_engineering.py  002_workflow_management.py  003_memory_system.py  004_prompt_management.py  005_users.py  006_hybrid_search.py  007_workflow_runs.py  008_add_opening_remarks.py  009_skill_workspace.py  010_add_deleted.py  011_rename_qdrant_collection.py  012_org_rbac_api_keys.py  012b_eval_tables.py  013_tenant_isolation_workspace_id.py  014_agent_guardrail_config.py  015_pii_mappings_table.py  016_workflow_mode_and_versioning.py  017_observability_audit_scheduling.py  a7e86a31f6fc_merge_heads.py  b94c75d0c398_add_model_providers_and_model_registry_.py  d4d66ddd6959_add_arg_conditions_to_tool_policies.py  e0e69d57120a_add_available_when_to_tools.py  e66673e35d7c_add_model_pricings.py  f1a2b3c4d5e6_add_approval_records_and_tool_policies.py  f7a8b9c0d1e2_add_alerting.py  g8b9c0d1e2f3_add_quota_tables.py  h9c0d1e2f3a4_add_evaluation_versioning.py  i0d1e2f3a4b5_add_prompt_commit_message.py  j1e2f3a4b5c6_add_i18n_locale_fields.py  k1a2b3c4d5e6_add_user_scim_fields.py  l1b2c3d4e5f6_add_budget_forecasts_table.py  m1c2d3e4f5a6_add_model_deployments_table.py  n2d3e4f5a6b7_add_agent_skill_ids.py  o3e4f5a6b7c8_add_a2a_tasks_table.py  p4f5a6b7c8d9_add_agent_card_keys_table.py  q5f6a7b8c9d0_add_model_metadata_column.py  r6a7b8c9d0e1_add_inference_endpoints_table.py  s7b8c9d0e1f2_add_fine_tuning_tables.py  t8c9d0e1f2a3_add_model_cost_budgets_table.py  (+2 more)
docker/: docker-compose.yml
docs/design/: access-channel-design.md  agent-studio-design.md  architecture.md  concepts.md  ecosystem-design.md  engine-design.md  enterprise-foundation-design.md  knowledge-memory-design.md  model-hub-design.md  ops-center-design.md  rag-pipeline-design.md  security-architecture.md  tool-platform-design.md
docs/tmp/: compare.md  p1-review-plan.md
schemas/: graph-dsl.schema.json
scripts/: pre-commit.sh  smart-pytest.sh
src/hecate/: __init__.py  main.py
tests/: conftest.py
tests/test_a2a/: test_key_rotation.py  test_signing.py
tests/test_api/: test_a2a_management.py  test_agent_import_export.py  test_agent_model_availability.py  test_agent_templates.py  test_api_key_api.py  test_auth.py  test_auth_workspace.py  test_budget_api.py  test_chat_regression.py  test_citation_chat.py  test_collaboration_patterns.py  test_config_validation.py  test_e2e.py  test_e2e_model_provider.py  test_e2e_multi_agent.py  test_e2e_workflow.py  test_endpoints.py  test_evaluation_api.py  test_kb_hit_testing.py  test_memory.py  test_model_catalog_api.py  test_model_debug.py  test_model_lifecycle_api.py  test_model_providers.py  test_model_registry.py  test_monitoring.py  test_multi_kb_association.py  test_opening_remarks.py  test_orchestration_templates.py  test_org_api.py  test_prompts.py  test_rbac_api.py  test_schedule_api.py  test_skill_registry_api.py  test_skills.py  test_tenant_isolation.py  test_v1_models.py  test_workflow_extended.py  test_workflow_runs.py  test_workflows.py  (+1 more)
tests/test_auth/: test_ldap_provider.py  test_oidc_provider.py  test_provider.py  test_resolver.py  test_saml_provider.py
tests/test_budget/: test_budget_service.py
tests/test_channel/: test_adapter.py  test_gateway.py
tests/test_engine/: test_agent_tool.py  test_agent_worker.py  test_channel_registry.py  test_chat_graph_template.py  test_condition_worker.py  test_conflict_a2a.py  test_conflict_distributed.py  test_context.py  test_context_pipeline.py  test_eventbus.py  test_eventstore.py  test_eviction.py  test_exception_hierarchy.py  test_graph_dsl.py  test_guardrail.py  test_handoff.py  test_integration_collaboration.py  test_llm_worker.py  test_metrics_store.py  test_negotiation_templates.py  test_nesting_depth.py  test_new_node_types.py  test_optimization.py  test_patterns.py  test_pipeline_broadcast_templates.py  test_policy_pipeline.py  test_postgres_checkpoint.py  test_pregel.py  test_retry.py  test_routing.py  test_sanitize_action.py  test_scheduler.py  test_scheduler_integration.py  test_streaming.py  test_suggestion_worker.py  test_task_allocator.py  test_temporal.py  test_tool_access.py  test_tool_gate.py  test_tool_worker.py  (+2 more)
tests/test_i18n/: test_catalog.py  test_locale_resolver.py  test_translate.py
tests/test_mcp/: test_api.py  test_pool.py  (+3 more)
web/: .env.example  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
(+1381 files in other folders)
